# WQBookDownloader

./: .gitignore  HOTFIX.json  LICENSE  README.md  UPDATE.json  WQBookDownloader.js  WQBookDownloader.spec  add_toc.py  build.bat  build.sh  copy_version.py  pyproject.toml  requirements.txt
v1/: .gitignore  README.md  add_toc.py
wqdl/: main.py  utils.py
wqdl/webdriver_manager/: chrome.py  firefox.py  microsoft.py  opera.py
wqdl/webdriver_manager/core/: download_manager.py  driver.py  driver_cache.py  file_manager.py  http.py  logger.py  manager.py  os_manager.py  utils.py
wqdl/webdriver_manager/drivers/: chrome.py  edge.py  firefox.py  ie.py  opera.py
