[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wqdl"
version = "2.0.0"
description = "为 WQBookDownloader 构建的 Python 项目，便于管理"
readme = "README.md"
authors = [{ name = "Qalxry", email = "qalxry@qq.com" }]
license = { text = "GPLv3" }
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "requests",
    "selenium>=4.25.1",
    "PyMuPDF>=1.25.2",
    "flet==0.19.0",
    "pyinstaller",
    "python-dotenv"
]

[tool.setuptools]
packages = { find = { where = ["wqdl"] } }
