[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wqdl"
dynamic = ["version"]  # 声明 version 为动态字段
description = "为 WQBookDownloader 构建的 Python 项目，便于管理"
readme = "README.md"
authors = [{ name = "Qalxry", email = "qalxry@qq.com" }]
license = { text = "GPLv3" }
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "requests",
    "selenium>=4.25.1",
    "PyMuPDF>=1.25.2",
    "flet==0.19.0",
    "pyinstaller",
    "python-dotenv"
]

[tool.setuptools]
packages = { find = { where = ["wqdl"] } }

# 添加动态版本配置
[tool.setuptools.dynamic]
version = { attr = "wqdl.__version__" }  # 从模块属性获取版本